--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -11,6 +11,7 @@
     align-items: center;
     text-align: center;
     .slim {
+      display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -25,7 +26,47 @@
         line-height: 1.2;
       }
     }
+    .slimWithAward {
+      display: flex;
+      flex-direction: row;
+
+      text-align: left;
+      .award {
+        flex: 2;
+        & > * {
+          max-width: 200px;
+        }
+      }
+      // testimonial content
+      .textContent {
+        flex: 1;
+      }
+      .quote {
+        font-weight: 400;
+        font-size: 1.5rem;
+        padding: 0.75rem 0 2rem 0;
+      }
+      .client {
+        position: relative;
+        font-size: 1rem;
+        line-height: 1.2;
+        margin-left: 1rem;
+        &::before {
+          content: "- ";
+          display: block;
+          position: absolute;
+          left: 0;
+          top: 50%;
+          transform: translate(-1rem, -50%);
+        }
+      }
+      .award {
+        min-height: 200px;
+        min-width: 100px;
+      }
+    }
     .normal {
+      display: flex;
       max-width: 920px;
       flex-direction: column;
       justify-content: center;
