--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -12,77 +12,111 @@
     text-align: center;
     .slim {
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
-      .quote {
-        font-weight: 400;
-        font-size: 1.5rem;
-        padding: 0.75rem 0 2rem 0;
-      }
-      .client {
-        font-size: 1rem;
-        line-height: 1.2;
-      }
-    }
-    .slimWithAward {
-      display: flex;
-      flex-direction: row;
-
-      text-align: left;
-      .award {
-        flex: 2;
-        & > * {
-          max-width: 200px;
+      .awardImage {
+        max-width: 200px;
+        margin-right: 3.5rem;
+        img {
+          height: unset !important;
+          position: unset !important;
         }
       }
-      // testimonial content
       .textContent {
-        flex: 1;
-      }
-      .quote {
-        font-weight: 400;
-        font-size: 1.5rem;
-        padding: 0.75rem 0 2rem 0;
-      }
-      .client {
-        position: relative;
-        font-size: 1rem;
-        line-height: 1.2;
-        margin-left: 1rem;
-        &::before {
-          content: "- ";
-          display: block;
-          position: absolute;
-          left: 0;
-          top: 50%;
-          transform: translate(-1rem, -50%);
+        &:nth-child(2) {
+          color: $color-black;
+          max-width: 516px;
+          text-align: left;
+          .rating {
+            img {
+              margin: 0 0.5rem;
+            }
+          }
+          .quote {
+            font-weight: 400;
+            font-size: 1.25rem;
+            padding: 0.75rem 0 2rem 0;
+          }
+          .client {
+            position: relative;
+            font-size: 1rem;
+            line-height: 1.2;
+            margin-left: 1rem;
+            &::before {
+              content: "- ";
+              display: block;
+              position: absolute;
+              left: 0;
+              top: 50%;
+              transform: translate(-1rem, -50%);
+            }
+          }
         }
-      }
-      .award {
-        min-height: 200px;
-        min-width: 100px;
+        .quote {
+          font-weight: 400;
+          font-size: 1.5rem;
+          padding: 0.75rem 0 2rem 0;
+        }
+        .client {
+          font-size: 1rem;
+          line-height: 1.2;
+        }
       }
     }
     .normal {
       display: flex;
       max-width: 920px;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
-      .quote {
-        font-weight: 600;
-        font-size: 1.85rem;
-        line-height: 1.2;
-        padding: 0.75rem 0 2rem 0;
+      .awardImage {
+        max-width: 250px;
+        margin-right: 3.5rem;
+        img {
+          height: unset !important;
+          position: unset !important;
+        }
       }
-      .client {
-        font-size: 1.85rem;
-        line-height: 1.2;
-        .jobTitle {
-          font-style: italic;
+      .textContent {
+        &:nth-child(2) {
+          color: $color-black;
+          max-width: 516px;
+          text-align: left;
+          .rating {
+            img {
+              margin: 0 0.5rem;
+            }
+          }
+          .quote {
+            padding: 0.75rem 0 2rem 0;
+          }
+          .client {
+            position: relative;
+            line-height: 1.2;
+            margin-left: 1rem;
+            &::before {
+              content: "- ";
+              display: block;
+              position: absolute;
+              left: 0;
+              top: 50%;
+              transform: translate(-1rem, -50%);
+            }
+          }
+        }
+        .quote {
+          font-weight: 600;
+          font-size: 1.85rem;
+          line-height: 1.2;
+          padding: 0.75rem 0 2rem 0;
+        }
+        .client {
+          font-size: 1.85rem;
+          line-height: 1.2;
+          .jobTitle {
+            font-style: italic;
+          }
         }
       }
     }
