--- a/components/agility-pageModules/heroImage/heroImage.module.scss
+++ b/components/agility-pageModules/heroImage/heroImage.module.scss
@@ -18,13 +18,15 @@
   }
   @include desktop() {
     height: 100%;
-    max-height: 340px;
+    min-height: 340px;
     overflow: hidden;
+    position: relative;
     & > * {
-      position: absolute;
+      position: absolute !important;
       top: 0;
       left: 0;
       width: 100%;
+      height: 100%;
       img {
         object-fit: cover;
         max-height: unset !important;
