--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -97,6 +97,24 @@ $color-mediumpurple: #6e0bdc;
     );
   }
 }
+.bg-radial-gradient-bottom {
+  position: relative;
+  margin-bottom: 1.35rem;
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    height: 1.35rem;
+    transform: translateY(100%);
+    background: radial-gradient(
+      ellipse farthest-side at top center,
+      rgba(0, 0, 0, 0.08),
+      transparent
+    );
+  }
+}
 .bg-radial-gradient {
   height: 1.35rem;
   background: radial-gradient(
@@ -130,4 +148,7 @@ $color-mediumpurple: #6e0bdc;
 }
 .text-lightblue {
   color: $color-lightblue;
+}
+.text-mediumblue {
+  color: $color-mediumblue;
 }
