--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -256,3 +256,25 @@ blog posts or anywhere where html is rendered */
 .is-size-8px {
   font-size: fonts.$size-8px;
 }
+
+.w-100 {
+  font-weight: 100;
+}
+.w-200 {
+  font-weight: 200;
+}
+.w-300 {
+  font-weight: 300;
+}
+.w-400 {
+  font-weight: 400;
+}
+.w-500 {
+  font-weight: 500;
+}
+.w-600 {
+  font-weight: 600;
+}
+.w-700 {
+  font-weight: 700;
+}
