--- a/components/layout/globalMessage/globalMessage.module.scss
+++ b/components/layout/globalMessage/globalMessage.module.scss
@@ -36,5 +36,38 @@
     position: absolute;
     padding: inherit;
     right: 0;
+    a {
+      &:before {
+        content: "\00d7";
+        speak: none;
+        font-style: normal;
+        font-weight: 400;
+        font-variant: normal;
+        text-transform: none;
+        font-size: 1.8rem;
+        line-height: 1rem;
+        opacity: 0.7;
+      }
+      padding: 1rem;
+    }
+  }
+}
+
+.messageContent {
+  color: $color-white;
+  width: 90%;
+  text-align: left;
+  
+  @include desktop() {
+    text-align: center;
+  }
+  // Need important here to override some typography settings since this is a unique module
+  * {
+    padding-top: 0 !important;
+    margin-top: 0 !important;
+  }
+
+  a {
+    color: inherit;
   }
 }
