--- a/styles/settings/_variables.scss
+++ b/styles/settings/_variables.scss
@@ -7,3 +7,11 @@ $fullhd: 1920px;
 $narrow: 640px;
 $medium: 1366px;
 $wide: $fullhd;
+
+// rem-sizes
+$size-1: 0.5rem;
+$size-2: 1rem;
+$size-3: 1.5rem;
+$size-4: 2rem;
+$size-5: 3rem;
+$size-6: 5rem;
