--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -1,4 +1,4 @@
-@use "./settings/fonts" as fonts;
+@use "./settings/variables" as var;
 /*
 Configure font sizes and how text is rendred.
 Try to use only html element selectors and override with classes when needed. 
@@ -202,59 +202,24 @@ blog posts or anywhere where html is rendered */
 /*
   <<<<<<<<<<<<<<<<TYPOGRAPHY HELPER CLASSES>>>>>>>>>>>>>>>>>
 */
-.is-size-50px {
-  font-size: fonts.$size-50px;
+
+.is-size-1 {
+  font-size: var.$size-1;
 }
-.is-size-40px {
-  font-size: fonts.$size-40px;
+.is-size-2 {
+  font-size: var.$size-2;
 }
-.is-size-38px {
-  font-size: fonts.$size-38px;
+.is-size-3 {
+  font-size: var.$size-3;
 }
-.is-size-36px {
-  font-size: fonts.$size-36px;
+.is-size-4 {
+  font-size: var.$size-4;
 }
-.is-size-32px {
-  font-size: fonts.$size-32px;
+.is-size-5 {
+  font-size: var.$size-5;
 }
-.is-size-30px {
-  font-size: fonts.$size-30px;
-}
-.is-size-28px {
-  font-size: fonts.$size-28px;
-}
-.is-size-26px {
-  font-size: fonts.$size-26px;
-}
-.is-size-22px {
-  font-size: fonts.$size-22px;
-}
-.is-size-20px {
-  font-size: fonts.$size-20px;
-}
-.is-size-18px {
-  font-size: fonts.$size-18px;
-}
-.is-size-16px {
-  font-size: fonts.$size-16px;
-}
-.is-size-15px {
-  font-size: fonts.$size-15px;
-}
-.is-size-14px {
-  font-size: fonts.$size-14px;
-}
-.is-size-13px {
-  font-size: fonts.$size-13px;
-}
-.is-size-12px {
-  font-size: fonts.$size-12px;
-}
-.is-size-10px {
-  font-size: fonts.$size-10px;
-}
-.is-size-8px {
-  font-size: fonts.$size-8px;
+.is-size-6 {
+  font-size: var.$size-6;
 }
 
 .w-100 {
