add global settings/data, render footer data

--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -47,7 +47,7 @@
   .socialMedia {
     display: flex;
     margin-top: 1.5rem;
-    span {
+    img {
       margin-right: 1.5rem;
       border-radius: 100%;
       background: white;
