add newsList, pressReleaseList and pressReleaseContent

--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/settings/_colors.scss";
+@import "../../../styles/settings/colors";
 @import "../../../styles/settings/mixins";
 
 .content {
