--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,7 @@
 @import "typography";
 @import "marketo";
 @import "./components/_components-dir";
+@import "./agility-pageModules/_agility-pageModules-dir";
 
 /* Try not to set anything on html for best accessibility */
 // html {
