add Link to newsList and pressReleaseList

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -243,3 +243,7 @@ blog posts or anywhere where html is rendered */
 .w-700 {
   font-weight: 700;
 }
+
+.text-decoration-unset  {
+  text-decoration: unset;
+}
