--- a/styles/agility-pageModules/_newsList.scss
+++ b/styles/agility-pageModules/_newsList.scss
@@ -64,7 +64,18 @@
     }
   }
   &__container {
-    padding-bottom: 8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 4rem;
     border-bottom: 0.15rem solid $color-mediumgray;
+  }
+  &--link {
+    font-size: 1.25rem;
+    padding: 0.75em 2em;
+    border-radius: 3em;
+    border-width: 0.15em;
+    margin-top: 4rem;
   }
 }
