changes to archivesPageContent

--- a/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archivesPageContent.module.scss
@@ -68,6 +68,8 @@
       grid-area: pages;
       padding: 1rem;
       display: flex;
+      flex-direction: column;
+      align-items: center;
       justify-content: center;
       .previousPageButton {
         position: relative;
