--- a/components/agility-pageModules/archivesPageContent/archiveCard.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archiveCard.module.scss
@@ -46,6 +46,12 @@
     min-height: 50%;
     max-height: 50%;
 
+    .date {
+      text-transform: uppercase;
+      color: $color-black;
+      font-size: 1rem;
+      padding: 0.5rem 1.5rem 0 1.5rem;
+    }
     .title {
       font-size: 1.15rem;
       padding: 1rem 1.5rem 0 1.5rem;
