--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -1,3 +1,6 @@
+@import "../../../styles/settings/colors";
+@import "../../../styles/settings/mixins";
+
 .firstFold {
   .heading {
     margin-bottom: 2rem;
@@ -19,5 +22,57 @@
     padding: 0.5em 2em;
     border-radius: 3em;
     border-width: 0.15em;
+  }
+}
+
+// alternate layout: image as a background image, text content centered
+.firstFoldAlternate {
+  width: 100vw;
+  padding: unset;
+  height: 100%;
+  min-height: 300px;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .backgroundImage {
+    & > * {
+      display: block !important;
+      height: 100%;
+    }
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    img {
+      object-fit: cover;
+      max-height: unset !important;
+      min-height: unset !important;
+      height: 100% !important;
+    }
+  }
+  .textContent {
+    position: absolute;
+    text-align: center;
+    color: $color-white;
+    .text {
+      font-size: 1.25rem;
+    }
+  }
+  @include desktop() {
+    min-height: 375px;
+    .backgroundImage {
+      & > * {
+        display: block !important;
+        height: 100%;
+      }
+    }
+    .textContent {
+      .text {
+        font-size: 1.5rem;
+      }
+    }
   }
 }
