--- a/components/agility-pageModules/resourceList/resourceList.module.scss
+++ b/components/agility-pageModules/resourceList/resourceList.module.scss
@@ -34,4 +34,16 @@
       }
     }
   }
+  .link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    a {
+      font-size: 1.25rem;
+      padding: 0.75em 2em;
+      border-radius: 3em;
+      border-width: 0.15em;
+      margin-top: 4rem;
+    }
+  }
 }
