--- a/components/agility-pageModules/archivesPageContent/archiveCard.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archiveCard.module.scss
@@ -52,16 +52,24 @@
       font-size: 1rem;
       padding: 0.5rem 1.5rem 0 1.5rem;
     }
+
+    .category {
+      padding: 0 1.5rem;
+      display: block;
+      font-weight: 600;
+      font-size: 1rem;
+    }
+
     .title {
       font-size: 1.15rem;
-      padding: 1rem 1.5rem 0 1.5rem;
+      padding: 0 1.5rem;
       text-overflow: ellipsis;
       overflow: hidden;
       width: 100%;
     }
 
     .link {
-      padding: 1rem 1.5rem;
+      padding: 0.5rem 1.5rem 1rem 1.5rem;
       display: block;
       font-weight: 600;
       font-size: 1rem;
