styling change to archivesLoader

--- a/components/agility-pageModules/archivesPageContent/archivesLoader.module.scss
+++ b/components/agility-pageModules/archivesPageContent/archivesLoader.module.scss
@@ -12,6 +12,7 @@
     flex-direction: column;
     justify-content: flex-end;
     @include touch() {
+      width: 100%;
       .loadingImageField {
         max-height: 360px;
       }
