--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -74,9 +74,6 @@ h6,
   }
 }
 
-p {
-}
-
 strong,
 b {
   font-weight: 600;
@@ -178,8 +175,6 @@ blog posts or anywhere where html is rendered */
       margin: 0 0 1.5rem 1.5rem;
     }
   }
-  img {
-  }
 
   .text-graphic {
     border: 0.1rem solid $color-gray;
@@ -197,6 +192,26 @@ blog posts or anywhere where html is rendered */
   padding: 2rem 0;
   margin: 3rem 0 1rem 0;
   text-align: center;
+}
+
+table {
+  border-spacing: 0;
+  thead {
+    th {
+      font-size: 1rem;
+      border-bottom: 0.1rem solid $color-gray;
+      padding: 0.5rem 1rem;
+      text-align: left;
+    }
+  }
+  tbody {
+    td {
+      font-size: 1rem;
+      border-bottom: 0.1rem solid $color-gray;
+      padding: 0.5rem 1rem;
+      text-align: left;
+    }
+  }
 }
 
 /*
