--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -54,10 +54,12 @@
     }
   }
   .customerStoryTextContent {
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 15%);
+    padding: 1.5rem;
+    margin-bottom: 8em;
+    transform: translate(-50%, 70%);
     padding: 2.5rem 2rem 3rem 2rem;
     box-shadow: 4px 4px 20px hsla(0, 0%, 49.8%, 0.15);
     background-color: $color-white;
@@ -79,6 +81,13 @@
       font-size: $size-4;
       max-width: $tablet;
       margin: 0 auto;
+    }
+    @include desktop() {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, 15%);
+      padding: 2.5rem 2rem 3rem 2rem;
     }
   }
   .textContent {
