--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -78,6 +78,13 @@
   flex-direction: column;
 }
 
+// only apply on touch screen widths.
+.flex-direction-column-touch {
+  @include touch() {
+    flex-direction: column;
+  }
+}
+
 .flex-direction-column-reverse {
   flex-direction: column-reverse;
 }
@@ -197,6 +204,17 @@
 
 .box-shadow {
   box-shadow: 0 1px 4px rgb(0, 0, 0, 10%);
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+.clear-left {
+  clear: left;
 }
 
 /*
@@ -354,7 +372,7 @@
 }
 
 .padding-unset {
-  padding: unset;
+  padding: unset !important;
 }
 
 /*
